@startuml
title Diagramme de classes - Sprint 2
left to right direction
hide circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class User {
  +id: number
  +email: string
  +password?: string
  +role: string
  +is_verified: boolean
  +oauth_provider: string
  +profile_completed: boolean
  +created_at: Date
  +register()
  +login()
  +verifyEmail()
  +resetPassword()
  +updateProfile()
}

class Athlete {
  +id: number
  +userId: number
  +sport?: string
  +goals?: string
  +experienceLevel?: string
  +fitnessLevel?: string
  +joinedDate: Date
  +completeProfile()
  +updateMetrics()
  +consultDashboard()
}

class CoachProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +monthlyPrice: decimal
  +verified: boolean
  +updateProfile()
  +publishProgram()
  +manageAthletes()
}

class NutritionistProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +specializations?: string[]
  +updateProfile()
  +createDietPlan()
  +monitorCompliance()
}

class CoachingRequest {
  +id: uuid
  +athleteId: number
  +coachProfileId: uuid
  +initiator: enum
  +status: pending|accepted|rejected
  +message?: string
  +send()
  +accept()
  +reject()
  +disconnect()
}

class NutritionConnection {
  +id: uuid
  +athleteId: number
  +nutritionistProfileId: uuid
  +initiator: enum
  +status: pending|accepted|rejected
  +message?: string
  +send()
  +respond()
  +listClients()
}

class CoachSpecialization {
  +id: uuid
  +coachProfileId: uuid
  +specialization: string
  +is_primary: boolean
}

class CoachCertification {
  +id: uuid
  +coachProfileId: uuid
  +name: string
  +issuer?: string
  +verified: boolean
}

User "1" --> "0..1" Athlete : possède
User "1" --> "0..1" CoachProfile : possède
User "1" --> "0..1" NutritionistProfile : possède
Athlete "1" --> "0..*" CoachingRequest : demande
CoachProfile "1" --> "0..*" CoachingRequest : reçoit
CoachProfile "1" --> "0..*" CoachSpecialization : décrit
CoachProfile "1" --> "0..*" CoachCertification : certifie
Athlete "1" --> "0..*" NutritionConnection : demande
NutritionistProfile "1" --> "0..*" NutritionConnection : suit
@enduml
